<resources>
    <string name="app_name">Reminder Notes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="click_to_create_a_new_reminder">Click button to create a new reminder</string>
    <string name="reminder_title">Enter Reminder title</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="repeat">Repeat</string>
    <string name="calendar">Calendar</string>
    <string name="repetition_intervals">Repetition Intervals</string>
    <string name="repeat_every">Repeat Every</string>
    <string name="alarm_on_or_off">Alarm on or off</string>
    <string name="thumbnail_image">thumbnail image</string>
    <string name="add_notes">Notes</string>

    <string name="action_discard_reminder">Discard reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="dialog_discard_changes">Discard changes?</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_keep_editing">Keep Editing</string>
    <string name="saved">Saved</string>
    <string name="dialog_delete_this_reminder">Delete this reminder?</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="error_deleting_reminder">Error deleting reminder</string>
    <string name="reminder_deleted">Reminder Deleted</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="repeat_off">Off</string>
    <string name="error_saving_reminder">Error saving reminder</string>
    <string name="reminder_saved">Reminder saved</string>
    <string name="error_updating_reminder">Error updating reminder</string>
    <string name="reminder_updated">Reminder updated</string>
    <string name="text_every">Every </string>
    <string name="text_space">  </string>
    <string name="text_s">(s)</string>
    <string name="repeat_number_and_type">Repeat Number and Type</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="repeat_date_and_time">Date and Time</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="enter_notes">Enter notes</string>
    <string name="description">Description</string>
    <string name="off">Off</string>
    <string name="on">On</string>
</resources>
