<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FF004445"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/reminder_details"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_toStartOf="@+id/active_image"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <TextView
            android:id="@+id/recycle_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            tools:text="Title" />

        <TextView
            android:id="@+id/recycle_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="@string/repeat_date_and_time" />

        <TextView
            android:id="@+id/recycle_repeat_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="@string/repeat_number_and_type" />

        <TextView
            android:id="@+id/recycle_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="@string/additional_notes" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/white"
            tools:ignore="MissingConstraints" >
        </View>


    </LinearLayout>

    <ImageView
        android:id="@+id/active_image"
        android:layout_width="67dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/alarm_on_or_off"
        android:src="@drawable/ic_alarm_off"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/reminder_details"
        app:layout_constraintTop_toBottomOf="@id/appbar" />
    


</androidx.constraintlayout.widget.ConstraintLayout>