<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddReminderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/reminder_title"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:autofillHints="@string/reminder_title"
        android:hint="@string/reminder_title"
        android:inputType="textMultiLine"
        android:paddingTop="60sp"
        android:paddingBottom="20sp"
        android:background="@android:color/white"
        android:textAlignment="textEnd"
        android:textSize="28sp"
        android:paddingEnd="50dp"
        android:textColor="@android:color/black"
        android:paddingStart="1dp"
        android:textColorHint="@android:color/secondary_text_light_nodisable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:id="@+id/add_reminder_layout"
        android:background="@android:color/black"
        android:paddingTop="10sp"
        android:paddingBottom="20sp"
        app:layout_constraintTop_toBottomOf="@id/reminder_title"
        tools:layout_editor_absoluteX="217dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/select_date"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/select_date"
                android:background="@android:color/black"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="10sp"
                android:ems="15"
                android:onClick="setDate"
                android:text="@string/select_date"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/select_time"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/select_time"
                android:drawableStart="@drawable/ic_time"
                android:drawablePadding="10sp"
                android:ems="15"
                android:text="@string/select_time"
                android:onClick="setTime"
                android:inputType=""
                android:background="@android:color/black"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="323dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/repeat"
                    android:layout_width="280dp"
                    android:layout_height="70sp"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_repeat"
                    android:drawablePadding="10sp"
                    android:ems="15"
                    android:paddingVertical="20sp"
                    android:text="@string/repeat"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:onClick="onSwitchRepeat"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:layoutDirection="ltr"
                    app:layout_constraintLeft_toRightOf="@id/repeat"
                    app:switchPadding="10dp" />

            </LinearLayout>
            <TextView
                android:id="@+id/repetition_intervals"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_replay"
                android:drawablePadding="10sp"
                android:ems="15"
                android:paddingVertical="20sp"
                android:text="@string/repetition_intervals"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:onClick="setRepeatNo"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/repeat_every"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_subject"
                android:drawablePadding="10sp"
                android:ems="15"
                android:paddingVertical="20sp"
                android:text="@string/repeat_every"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:onClick="selectRepeatType"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/add_notes"
                android:layout_width="wrap_content"
                android:layout_height="70sp"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/add_notes"
                android:drawableStart="@drawable/ic_notes"
                android:drawablePadding="10sp"
                android:ems="15"
                android:hint="@string/add_notes"
                android:background="@android:color/black"
                android:inputType="text"
                android:textColorHint="@android:color/white" />
        </LinearLayout>
    </ScrollView>
<!--    <view-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="2dp"-->
<!--        android:layout_below="@+id/add_reminder_layout"-->
<!--        android:background="@drawable/toolbar_dropshadow"-->
<!--        tools:ignore="MissingConstraints" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="#02a8a8"
        android:clickable="true"
        android:focusable="true"
        android:onClick="selectFab1"
        android:src="@drawable/ic_notifications_off"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="104dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:backgroundTint="#02a8a8"
        android:clickable="true"
        android:focusable="true"
        android:onClick="selectFab2"
        android:src="@drawable/ic_notifications_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>